Add 3 new voicings and replace 'b' with flat symbol
Signed-off-by: Ben Shelton <ben.shelton@gmail.com>

--- a/basic_grips.tex
+++ b/basic_grips.tex
@@ -21,11 +21,19 @@ This section is a catch-all for interesting voicings that don't fall cleanly int
 
 \chords{
 \abschord{5}{7,8,7,7,8,7}{{G9}}
-\chord{7}{p{1},x,p{4},p{2},p{4},p{1}}{{C7b9}}
-\chord{3}{x,p{4},p{5},p{2},p{1},p{1}}{{C7$\sharp$9b13}}
-\chord{1}{p{4},x,p{4},p{5},p{3},p{1}}{{Ab13$\sharp$11}}
-\chord{3}{x,p{3},p{4},p{4},p{4},p{2}}{{E13b9}}
+\chord{7}{p{1},x,p{4},p{2},p{4},p{1}}{{C7($\flat$9)}}
+\chord{3}{x,p{4},p{5},p{2},p{1},p{1}}{{C7($\sharp$9)($\flat$13)}}
+\chord{1}{p{4},x,p{4},p{5},p{3},p{1}}{{A$\flat$13($\sharp$11)}}
+\chord{3}{x,p{3},p{4},p{4},p{4},p{2}}{{E13$\flat$9}}
 \abschord{3}{x,5,8,5,7,x}{{D$+$7}}
+}
+
+\chords{
+\abschord{1}{x,5,6,4,5,3}{{E7$\sharp$9 or B$\flat$13($\flat$9)}}
+}
+
+\chords{
+\abschord{1}{x,5,6,4,5,4}{{E7 or B$\flat$7($\flat$9)($\sharp$11)}}
 }
 
 \subsection{Diminished}
@@ -33,6 +41,6 @@ This section is a catch-all for interesting voicings that don't fall cleanly int
 \subsection{Half Diminished}
 
 \chords{
-\chord{3}{x,p{5},p{3},p{1},p{1},p{1}}{{Em7b5}}
-\chord{5}{x,p{3},p{1},p{3},p{1},p{2}}{{Em7b5}}
+\chord{3}{x,p{5},p{3},p{1},p{1},p{1}}{{Em7$\flat$5}}
+\chord{5}{x,p{3},p{1},p{3},p{1},p{2}}{{Em7$\flat$5}}
 }
