--- a/rubs.tex
+++ b/rubs.tex
@@ -16,6 +16,11 @@ Here's a rootless 13th voicing that a piano player might play with a half-step r
 \abschord{4}{x,9,9,5,5,5}{{D13}}
 }
 
+And a similar voicing with a different note in the bass gets you a sus($\flat$9) sound.  Credit goes to Damian Garcia for showing me this one.
+\chords{
+\abschord{3}{6,x,8,4,4,4}{{B$\flat$7sus($\flat$9)}}
+}
+
 Here's a nice major seventh voicing with a rub between the M7 (3rd string) and the root (2nd string).  Credit goes to Brian Pardo for showing me this one.  You can omit the bottom note or grab it with your thumb.
 
 \chords{
