Add several new voicings and update the date.
Signed-off-by: Ben Shelton <ben.shelton@gmail.com>

--- a/basic_grips.tex
+++ b/basic_grips.tex
@@ -9,6 +9,7 @@ This section is a catch-all for interesting voicings that don't fall cleanly int
 \chord{1}{x,p{5},p{2},p{2},p{2},p{2}}{{Dmaj9}}
 \chord{2}{x,p{4},p{3},p{3},p{1},p{1}}{{Dmaj13}}
 \chord{2}{p{4},x,p{3},p{3},p{1},p{1}}{{A6/9}}
+\abschord{2}{6,x,7,5,3,3}{{B$\flat$maj13}}
 }
 
 \subsection{Minor}
@@ -25,7 +26,12 @@ This section is a catch-all for interesting voicings that don't fall cleanly int
 \chord{3}{x,p{4},p{5},p{2},p{1},p{1}}{{C7($\sharp$9)($\flat$13)}}
 \chord{1}{p{4},x,p{4},p{5},p{3},p{1}}{{A$\flat$13($\sharp$11)}}
 \chord{3}{x,p{3},p{4},p{4},p{4},p{2}}{{E13$\flat$9}}
+}
+
+\chords{
 \abschord{3}{x,5,8,5,7,x}{{D$+$7}}
+\abschord{10}{x,12,13,13,15,13}{{F13$\sharp$9}}
+\abschord{4}{x,7,6,8,7,8}{{C7($\sharp$5)($\sharp$11)}}
 }
 
 \chords{
@@ -43,4 +49,5 @@ This section is a catch-all for interesting voicings that don't fall cleanly int
 \chords{
 \chord{3}{x,p{5},p{3},p{1},p{1},p{1}}{{Em7$\flat$5}}
 \chord{5}{x,p{3},p{1},p{3},p{1},p{2}}{{Em7$\flat$5}}
+\abschord{3}{x,7,5,7,7,6}{{Em9$\flat$5}}
 }
