--- a/movements.tex
+++ b/movements.tex
@@ -22,6 +22,17 @@ Here's how Burt Bacharach's `Alfie' does it:
 \abschord{3}{6,x,5,5,6,5}{{B$\flat$maj13}}
 }
 
+And here's a way to bring motion to a static minor chord, stolen from Vic Juris:
+
+\def\numfrets{7}
+\chords{
+\abschord{4}{8,x,5,8,8,x}{{Cm}}
+\abschord{4}{8,x,6,8,9,x}{{Cm($\sharp$5)}}
+\abschord{4}{8,x,7,8,10,x}{{Cm6}}
+\abschord{4}{8,x,8,8,11,x}{{Cm7}}
+}
+\def\numfrets{6}
+
 \section{Minor ii-V}
 
 These have the same top note as the first two chords of "Old Folks".
