--- a/rubs.tex
+++ b/rubs.tex
@@ -26,3 +26,27 @@ Here's a nice major seventh voicing with a rub between the M7 (3rd string) and t
 \chords{
 \abschord{5}{x,8,7,9,6,8}{{Fmaj7}}
 }
+
+And a permutation of it with the fifth on the bottom.  I stole this one from Vic Juris.
+
+\chords{
+\abschord{5}{8,x,7,9,6,x}{{Fmaj7}}
+}
+
+Here's a 7$\sharp$9 voicing with the $\flat$7 on top and a rub between the $\sharp$9 and the 3.
+
+\chords{
+\abschord{4}{x,x,5,8,5,6}{{C7$\sharp$9}}
+}
+
+And the same idea, but with the root on top and the $\flat$7 on bottom.
+
+\chords{
+\abschord{4}{x,x,8,8,5,8}{{C7$\sharp$9}}
+}
+
+Here's a dominant voicing with the rub between the 6 and the $\flat$7.  This one is a nice move from the previous chord, from the I to the IV on a blues, for example.
+
+\chords{
+\abschord{3}{x,x,7,7,4,8}{{F13}}
+}
