Add a couple of new chords.
Signed-off-by: Ben Shelton <ben.shelton@gmail.com>

--- a/basic_grips.tex
+++ b/basic_grips.tex
@@ -18,6 +18,12 @@ This section is a catch-all for interesting voicings that don't fall cleanly int
 \abschord{5}{x,7,10,7,8,7}{{Am9/11}}
 }
 
+The Dmaj9 voicing in the previous section also works great as a minor voicing, either with an implied root a minor 3rd below, or with an open 6th string.  I stole this idea from George Harrison on the bridge to Learning How To Love You, where it's played like this:
+
+\chords{
+\abschord{6}{o,10,7,7,7,7}{{Em11}}
+}
+
 \subsection{Dominant}
 
 \chords{
