--- a/movements.tex
+++ b/movements.tex
@@ -111,7 +111,7 @@ Move the 5 to the $\sharp$5, and we end up with a D+9.
 \abschord{7}{x,9,10,9,11,10}{{D+9}}
 }
 
-Move the $\sharp$5 to the 13, and we end up with a nice D13 voicing.
+Move the $\sharp$5 to the 13, and we end up with a nice D13 voicing.  (This also works as an F$\sharp$m7$\flat$5, with the root on the bottom.)
 
 \chords{
 \abschord{7}{x,9,10,9,12,10}{{D13}}
