--- a/rubs.tex
+++ b/rubs.tex
@@ -16,6 +16,12 @@ Here's a rootless 13th voicing that a piano player might play with a half-step r
 \abschord{4}{x,9,9,5,5,5}{{D13}}
 }
 
+Or if you move this higher up the neck, you can put the root on top.  I stole this one from Ed Bickert.
+
+\chords{
+\abschord{7}{x,12,12,8,8,13}{{F13}}
+}
+
 And a similar voicing with a different note in the bass gets you a sus($\flat$9) sound.  Credit goes to Damian Garcia for showing me this one.
 \chords{
 \abschord{3}{6,x,8,4,4,4}{{B$\flat$7sus($\flat$9)}}
